# dqt-validation

./: .gitignore  README.md  keys.env.example  pyproject.toml
agentic_hinaing_eval/: __init__.py  adapter.py  agent_influence.py  agentevals_bridge.py  cli.py  evaluators.py  io.py  llm_judge.py  log.py  metrics_view.py  models.py  preflight.py  report.py  research_basis.py  runner_import.py  scoring.py  source_provenance.py
data/scenarios/: _legacy_hyperlocal_baguio_v1.jsonl.bak  ablation_pairs_v1.jsonl  adversarial_v1.jsonl  cache_reuse_v1.jsonl  hyperlocal_baguio_v2.jsonl  missing_data_v1.jsonl
docs/: command_reference.md  validation_methodology.md
scripts/: setup_backend_env.sh  test_local_env.sh  validation_tool_to_pdf.py
supabase/: config.toml
tests/: test_agent_influence.py  test_evaluators.py  test_llm_judge_stub.py  test_preflight.py  test_report.py  test_scenarios_schema.py  test_scoring.py  test_trajectory_capture.py
