[project]
name = "agentic-hinaing-eval"
version = "0.1.0"
description = "External agentic evaluation and thesis validation tooling for the Hinaing proof-of-concept."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
agent = [
  "agentevals>=0.0.9",
]
judge = [
  "anthropic>=0.40",
]
influence = [
  "sentence-transformers>=3.0",
]
pdf = [
  "reportlab>=4",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
hinaing-eval = "agentic_hinaing_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
